[gd_scene load_steps=173 format=2]

[ext_resource path="res://assets/GUIElements/book/6.png" type="Texture" id=1]
[ext_resource path="res://assets/GUIElements/book/1.png" type="Texture" id=2]
[ext_resource path="res://assets/GUIElements/book/7.png" type="Texture" id=3]
[ext_resource path="res://assets/GUIElements/book/3.png" type="Texture" id=4]
[ext_resource path="res://assets/GUIElements/book/2.png" type="Texture" id=5]
[ext_resource path="res://assets/GUIElements/book/4.png" type="Texture" id=6]
[ext_resource path="res://assets/GUIElements/book/5.png" type="Texture" id=7]
[ext_resource path="res://assets/GUIElements/Title_Screen.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/pixel font-7.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/GUIElements/Pause_Menu_Buttons.png" type="Texture" id=10]
[ext_resource path="res://resources/Textures/how_to.tres" type="Texture" id=11]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=12]
[ext_resource path="res://resources/styles/NoBorder.tres" type="StyleBox" id=13]
[ext_resource path="res://assets/fonts/Harker-rpwy.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/GUIElements/Dither.png" type="Texture" id=15]

[sub_resource type="AnimatedTexture" id=1]
frames = 7
pause = true
fps = 12.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 4 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 7 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 1 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 3 )
frame_6/delay_sec = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 1120, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 1440, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 1600, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 1760, 0, 160, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 160, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 320, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 480, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 640, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 800, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 960, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 1120, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 1280, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 1440, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 1600, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 1760, 80, 160, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 0, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 160, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 320, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 480, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 640, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 800, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 960, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 1120, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 1280, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 1440, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 1600, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 1760, 160, 160, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 0, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 160, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 320, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 480, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 640, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 800, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 960, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 1120, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 1280, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 1440, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 1600, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 1760, 240, 160, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 0, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 160, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 320, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 480, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 640, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 800, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 960, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 1120, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 1280, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 1440, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 1600, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 1760, 320, 160, 80 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 0, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 160, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 320, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 480, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 640, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 800, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 8 )
region = Rect2( 960, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 8 )
region = Rect2( 1120, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 8 )
region = Rect2( 1280, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 8 )
region = Rect2( 1440, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 8 )
region = Rect2( 1600, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 8 )
region = Rect2( 1760, 400, 160, 80 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 8 )
region = Rect2( 0, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 8 )
region = Rect2( 160, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 8 )
region = Rect2( 320, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 8 )
region = Rect2( 480, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 8 )
region = Rect2( 640, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 8 )
region = Rect2( 800, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 8 )
region = Rect2( 960, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 8 )
region = Rect2( 1120, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 8 )
region = Rect2( 1280, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 8 )
region = Rect2( 1440, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 8 )
region = Rect2( 1600, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 8 )
region = Rect2( 1760, 480, 160, 80 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 8 )
region = Rect2( 0, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 8 )
region = Rect2( 160, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 8 )
region = Rect2( 320, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 8 )
region = Rect2( 480, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 8 )
region = Rect2( 640, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 8 )
region = Rect2( 800, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 8 )
region = Rect2( 960, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 8 )
region = Rect2( 1120, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 8 )
region = Rect2( 1280, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 8 )
region = Rect2( 1440, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 8 )
region = Rect2( 1600, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 8 )
region = Rect2( 1760, 560, 160, 80 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 8 )
region = Rect2( 0, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 8 )
region = Rect2( 160, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 8 )
region = Rect2( 320, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 8 )
region = Rect2( 480, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 8 )
region = Rect2( 640, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 8 )
region = Rect2( 800, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 8 )
region = Rect2( 960, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 8 )
region = Rect2( 1120, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 8 )
region = Rect2( 1280, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 8 )
region = Rect2( 1440, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 8 )
region = Rect2( 1600, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 8 )
region = Rect2( 1760, 640, 160, 80 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 8 )
region = Rect2( 0, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 8 )
region = Rect2( 160, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 8 )
region = Rect2( 320, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 8 )
region = Rect2( 480, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 8 )
region = Rect2( 640, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 8 )
region = Rect2( 800, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 8 )
region = Rect2( 960, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 8 )
region = Rect2( 1120, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 8 )
region = Rect2( 1280, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 8 )
region = Rect2( 1440, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 8 )
region = Rect2( 1600, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 8 )
region = Rect2( 1760, 720, 160, 80 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 8 )
region = Rect2( 0, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 8 )
region = Rect2( 160, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 8 )
region = Rect2( 320, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 8 )
region = Rect2( 480, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 8 )
region = Rect2( 640, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 8 )
region = Rect2( 800, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 8 )
region = Rect2( 960, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 8 )
region = Rect2( 1120, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 8 )
region = Rect2( 1280, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 8 )
region = Rect2( 1440, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 8 )
region = Rect2( 1600, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 8 )
region = Rect2( 1760, 800, 160, 80 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 8 )
region = Rect2( 0, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 8 )
region = Rect2( 160, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 8 )
region = Rect2( 320, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 8 )
region = Rect2( 480, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 8 )
region = Rect2( 640, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 8 )
region = Rect2( 800, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 8 )
region = Rect2( 960, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 8 )
region = Rect2( 1120, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 8 )
region = Rect2( 1280, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 8 )
region = Rect2( 1440, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 8 )
region = Rect2( 1600, 880, 160, 80 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 8 )
region = Rect2( 1760, 880, 160, 80 )

[sub_resource type="SpriteFrames" id=146]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=147]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=148]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=149]
font_data = ExtResource( 9 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 10 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 10 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="DynamicFont" id=153]
outline_size = 1
font_data = ExtResource( 9 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 10 )
region = Rect2( 60, 0, 12, 12 )

[sub_resource type="DynamicFont" id=156]
size = 36
outline_size = 1
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=157]
size = 12
font_data = ExtResource( 9 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_bottom = -10.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 432.0
margin_bottom = 240.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 312, 88 )
frames = SubResource( 146 )
frame = 18
playing = true

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = 24.0
margin_right = 166.0
margin_bottom = 46.0
custom_styles/focus = ExtResource( 13 )
custom_fonts/font = SubResource( 147 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Begin Adventure"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = 50.0
margin_right = 166.0
margin_bottom = 72.0
custom_styles/focus = ExtResource( 13 )
custom_fonts/font = SubResource( 148 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Options"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = 75.0
margin_right = 166.0
margin_bottom = 97.0
custom_styles/focus = ExtResource( 13 )
custom_fonts/font = SubResource( 149 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="."]
margin_left = 47.0
margin_top = 179.0
margin_right = 59.0
margin_bottom = 191.0
texture = ExtResource( 11 )

[node name="Right" type="TextureRect" parent="."]
margin_left = 73.0
margin_top = 179.0
margin_right = 85.0
margin_bottom = 191.0
texture = SubResource( 150 )

[node name="Up" type="TextureRect" parent="."]
margin_left = 60.0
margin_top = 166.0
margin_right = 72.0
margin_bottom = 178.0
texture = SubResource( 151 )

[node name="Down" type="TextureRect" parent="."]
margin_left = 60.0
margin_top = 179.0
margin_right = 72.0
margin_bottom = 191.0
texture = SubResource( 152 )

[node name="Label" type="Label" parent="."]
margin_left = 47.6071
margin_top = 190.528
margin_right = 87.6071
margin_bottom = 206.528
custom_fonts/font = SubResource( 153 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Move"

[node name="Z" type="TextureRect" parent="."]
margin_left = 117.0
margin_top = 179.0
margin_right = 129.0
margin_bottom = 191.0
texture = SubResource( 154 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 99.2295
margin_top = 191.825
margin_right = 145.23
margin_bottom = 207.825
custom_fonts/font = SubResource( 153 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Attack"

[node name="X" type="TextureRect" parent="."]
margin_left = 170.0
margin_top = 179.0
margin_right = 182.0
margin_bottom = 191.0
texture = SubResource( 155 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 160.622
margin_top = 192.0
margin_right = 206.622
margin_bottom = 208.0
custom_fonts/font = SubResource( 153 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Item"

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 232.25
margin_top = 48.0
margin_right = 392.25
margin_bottom = 128.0
texture = ExtResource( 15 )

[node name="Label4" type="Label" parent="."]
margin_left = 46.25
margin_top = 37.0
margin_right = 191.25
margin_bottom = 79.0
custom_fonts/font = SubResource( 156 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Gankyu's Crypt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="Label" parent="."]
margin_left = 45.0
margin_top = 80.0
margin_right = 191.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 157 )
custom_colors/font_color = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "   Our hero Clara was tasked by the king, to conquer the monsters crypt and stop them from terrorizing the locals."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Options" to="." method="_on_Options_mouse_exited"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
